<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/backgroundColor"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.constraint.Guideline android:layout_width="wrap_content"
                                              android:layout_height="wrap_content"
                                              android:id="@+id/guideline3"
                                              android:orientation="horizontal"
                                              app:layout_constraintTop_toTopOf="parent"
                                              app:layout_constraintBottom_toBottomOf="parent"
                                              app:layout_constraintStart_toStartOf="parent"
                                              app:layout_constraintEnd_toEndOf="parent"
                                              app:layout_constraintGuide_percent="0.9"/>
        <android.support.constraint.Guideline android:layout_width="0dp"
                                              android:layout_height="0dp"
                                              android:id="@+id/guideline"
                                              android:orientation="horizontal"
                                              app:layout_constraintGuide_percent="0.45"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:srcCompat="@drawable/body"
                android:id="@+id/main_image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="@dimen/bmi_margin_bottom_main_image"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitCenter"
                android:contentDescription="@string/imageView_description_main"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/height_edit_text"
                android:hint="@string/your_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_text_view"
                android:layout_marginStart="@dimen/bmi_margin_start_end_edit_textM"
                android:layout_marginEnd="@dimen/bmi_margin_start_end_edit_textM"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/weight_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weight_text_view"
                android:hint="@string/your_weight"
                android:layout_marginStart="@dimen/bmi_margin_start_end_edit_textM"
                android:layout_marginEnd="@dimen/bmi_margin_start_end_edit_textM" />
        <TextView
                android:text="@string/height_cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/height_text_view"
                android:textSize="@dimen/bmi_text_size_18"
                app:layout_constraintTop_toBottomOf="@+id/main_image_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/bmi_margin_top_text_viewM"
                android:layout_marginStart="@dimen/bmi_margin_start_end_text_viewM"/>
        <TextView
                android:text="@string/weight_kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weight_text_view"
                android:textSize="@dimen/bmi_text_size_18"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/bmi_margin_start_end_text_viewM"
                android:layout_marginTop="@dimen/bmi_margin_top_text_viewM"
                app:layout_constraintTop_toBottomOf="@+id/height_edit_text"/>
        <Button
                android:text="@string/count_button_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:id="@+id/count_button"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/bmi_margin_start_end_count_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/bmi_margin_start_end_count_button"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/bmi_margin_bottom_count_button"
                android:layout_marginTop="@dimen/bmi_margin_top_count_button"
                app:layout_constraintTop_toTopOf="@+id/guideline3"/>
        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/bmi_margin_start_end_general_layout_8"
                android:layout_marginEnd="@dimen/bmi_margin_start_end_general_layout_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/count_button"
                android:visibility="invisible"
                android:id="@+id/bmi_container"
                android:layout_marginBottom="@dimen/bmi_margin_bottom_general_layout_8"
                android:layout_marginTop="@dimen/bmi_margin_top_general_layout_8"
                app:layout_constraintTop_toBottomOf="@+id/weight_edit_text">
            <TextView
                    android:text="@string/your_bmi_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/bmi_value_text_view"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    android:layout_marginEnd="@dimen/bmi_margin_start_end_edit_textM"
                    android:layout_marginBottom="@dimen/bmi_margin_bottom_text_viewM"
                    android:textSize="@dimen/bmi_text_size_18"
                    android:layout_marginTop="@dimen/bmi_margin_top_text_viewM_16"
                    app:layout_constraintTop_toTopOf="parent"/>
            <android.support.constraint.Guideline android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:id="@+id/guideline5"
                                                  android:orientation="vertical"
                                                  app:layout_constraintGuide_percent="0.6"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bmi_value_text_view"
                    android:textSize="@dimen/bmi_text_size_54"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    android:layout_marginEnd="@dimen/bmi_margin_start_end_edit_textM"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bmi_status_textView"
                    app:layout_constraintTop_toBottomOf="@+id/bmi_value_text_view"
                    android:layout_marginBottom="@dimen/bmi_margin_top_text_viewM"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.012"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    android:layout_marginEnd="@dimen/bmi_margin_start_end_edit_textM"
                    android:textAlignment="textEnd"
            />
            <ImageButton
                    android:layout_width="@dimen/bmi_size_image_view_question_mark"
                    android:layout_height="@dimen/bmi_size_image_view_question_mark"
                    android:id="@+id/info_button"
                    android:scaleType="fitCenter"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_marginTop="@dimen/bmi_margin_top_image_view_question_mark"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="@dimen/bmi_margin_bottom_image_view_question_mark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/question_mark"
                    app:layout_constraintStart_toEndOf="@+id/bmi_value_text_view"
                    android:layout_marginStart="@dimen/bmi_margin_start_end_image_view_question_mark"
                    android:contentDescription="@string/info_button_description_main"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
